Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     Shout out to HTML5 UP | html5up.net | @ajlkn for broadening my navbar horizons
 */
 
+
 /* Nav Styling */
     #header {
         background: rgba(0, 0, 0, 0.589);
@@ -63,9 +64,9 @@
     }
 
 /* Main Content Styling */
-    main {
+    /* main {
         margin-top: 3em;
-    }
+    } */
 
     #home, #intro, #do, #am, #work, #contact {
         border-bottom: 1em solid black;
@@ -73,9 +74,9 @@
         width: 100%;
     }
     
-    #home h1, #intro h1, #do h1, #am h1, #work h1, #contact h1 {
+    /* #home h1, #intro h1, #do h1, #am h1, #work h1, #contact h1 {
         margin-top: 3em;
-    }
+    } */
 
     /* Home Section */
         #home {
